--- a/src/demo.ipynb
+++ b/src/demo.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -182,15 +182,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<qore_sdk.client.WebQoreClient object at 0x7f6c72218978>\n",
-      "Time:. {'res': 'ok', 'train_time': 1.3091342449188232} min.\n"
+      "<qore_sdk.client.WebQoreClient object at 0x7f35a3f78240>\n",
+      "Time:. {'res': 'ok', 'train_time': 1.3400776386260986} min.\n"
      ]
     }
    ],
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -231,11 +231,11 @@
       "              precision    recall  f1-score   support\n",
       "\n",
       "           0       1.00      0.95      0.97       421\n",
-      "           1       0.58      0.94      0.71        32\n",
+      "           1       0.61      0.97      0.75        32\n",
       "\n",
       "    accuracy                           0.95       453\n",
-      "   macro avg       0.79      0.94      0.84       453\n",
-      "weighted avg       0.97      0.95      0.95       453\n",
+      "   macro avg       0.80      0.96      0.86       453\n",
+      "weighted avg       0.97      0.95      0.96       453\n",
       "\n"
      ]
     }
@@ -244,6 +244,13 @@
     "report = classification_report(y_test, res['Y'])\n",
     "print(report)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
