--- a/src/sign_sample.ipynb
+++ b/src/sign_sample.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,6 +10,7 @@
     "from imblearn.datasets import make_imbalance\n",
     "from sklearn.metrics import classification_report\n",
     "import numpy as np\n",
+    "from scipy.io import arff\n",
     "\n",
     "from qore_sdk.utils import sliding_window\n",
     "from qore_sdk.featurizer import Featurizer\n",
